# markdown-to-wordpress

./: .env.example  .gitignore  README.md  import_to_wordpress.py  md2wp.toml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/md2wp/: __init__.py  __main__.py  cli.py  config.py  logging.py  models.py  pipeline.py
src/md2wp/parsers/: __init__.py  hugo_build.py  markdown.py
src/md2wp/sinks/: __init__.py  wordpress.py  wxr.py
tests/: test_cli.py  test_hugo_build_parser.py  test_markdown_parser.py  test_wordpress_client.py  test_wxr.py
tests/fixtures/: draft-post.md  hugo-index.html  sample-post.en.md
utils/: export_utils.py  hugo.py  markdown_parser.py  wordpress.py
