[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md2wp"
version = "0.1.0"
description = "Import Markdown or Hugo build output into WordPress via REST API or WXR export"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Omid" }]
keywords = ["markdown", "wordpress", "hugo", "import", "wxr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "markdown>=3.5",
    "python-dotenv>=1.0",
    "python-frontmatter>=1.1",
    "requests>=2.31",
    "tomli>=2.0; python_version < '3.11'",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
md2wp = "md2wp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/md2wp"]

[tool.hatch.build.targets.sdist]
only-include = ["src/md2wp", "README.md", "LICENSE", "md2wp.toml.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
